# Nordocs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
.rp1/: project_id
.rp1/context/: charter.md  preferences.md
crates/nordocs-cli/: Cargo.toml
crates/nordocs-cli/src/: main.rs
crates/nordocs-cli/src/cli/: mod.rs
crates/nordocs-cli/tests/: cli.rs
crates/nordocs-cli/tests/fixtures/: compile_failing.md  invalid.md  invalid.ndoc.typ  jump.typ  render.ndoc.typ  template_show.ndoct.typ  unsupported.txt  valid.md
crates/nordocs-cli/tests/snapshots/: cli__snapshot_doc_outline.snap
crates/nordocs-core/: Cargo.toml
crates/nordocs-core/src/: compiler.rs  lib.rs  markdown.rs  preview.rs  service.rs  typst_world.rs  validation.rs
crates/nordocs-core/src/authoring/: doc_state.rs  mod.rs  ndoc.rs
crates/nordocs-core/src/fatfile/: composed.rs  mod.rs  ndoc.rs
crates/nordocs-core/src/schema/: mod.rs
crates/nordocs-core/src/snapshots/: nordocs_core__compiler__tests__svg_single_page.snap
crates/nordocs-core/tests/: fatfile.rs  markdown.rs  ndoc.rs
crates/nordocs-core/tests/snapshots/: fatfile__compose_minimal_fat_file.snap  markdown__snapshot_footnotes.snap  markdown__snapshot_headings.snap  markdown__snapshot_paragraphs.snap  markdown__snapshot_table.snap  ndoc__compose_empty_document.snap  ndoc__compose_multi_entry.snap
crates/nordocs-ffi/: Cargo.toml
crates/nordocs-ffi/bindings/: NordocsFfi.g.cs  NordocsSession.cs  README.md
crates/nordocs-ffi/bindings/consumer-test/: ConsumerTest.csproj  Program.cs  run.sh
crates/nordocs-ffi/src/: authoring.rs  compile.rs  convert.rs  error.rs  generate.rs  guard.rs  lib.rs  marshal.rs  session.rs
docs/: ffi-packaging.md  reference-inventory.json  reference-parity-map.md
openspec/: config.yaml
openspec/changes/archive/2026-06-13-dotnet-ffi/: design.md
openspec/changes/archive/2026-06-13-dotnet-ffi/specs/ffi-binding/: spec.md
openspec/changes/archive/2026-06-13-migrate-rp1-context/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-13-migrate-rp1-context/specs/cli-surface/: spec.md
openspec/changes/archive/2026-06-13-migrate-rp1-context/specs/component-library/: spec.md
openspec/changes/archive/2026-06-13-migrate-rp1-context/specs/fat-file-model/: spec.md
openspec/changes/archive/2026-06-13-multi-format-export/: design.md  proposal.md
openspec/changes/archive/2026-06-13-multi-format-export/specs/cli-surface/: spec.md
openspec/changes/archive/2026-06-13-multi-format-export/specs/render-pipeline/: spec.md
openspec/changes/archive/2026-06-13-source-map-session/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-13-source-map-session/specs/cli-surface/: spec.md
openspec/changes/archive/2026-06-13-source-map-session/specs/source-mapping/: spec.md
openspec/changes/archive/2026-06-13-workspace-split/: proposal.md  tasks.md
openspec/changes/archive/2026-06-13-workspace-split/specs/core-api/: spec.md
openspec/changes/dotnet-ffi/: proposal.md  tasks.md
openspec/changes/multi-format-export/: tasks.md
openspec/changes/source-map-session/: tasks.md
openspec/changes/workspace-split/: design.md  tasks.md
openspec/specs/cli-surface/: spec.md
openspec/specs/component-library/: spec.md
openspec/specs/core-api/: spec.md
openspec/specs/fat-file-model/: spec.md
openspec/specs/ffi-binding/: spec.md
openspec/specs/render-pipeline/: spec.md
openspec/specs/schema-validation/: spec.md
openspec/specs/source-mapping/: spec.md
scripts/: disposition_t3.py  extract_reference_inventory.py
src/: compiler.rs  error.rs  lib.rs  main.rs  markdown.rs  model.rs  typst_world.rs  validation.rs
src/authoring/: doc_state.rs  mod.rs  ndoc.rs
src/authoring/snapshots/: northdoc__authoring__doc_state__tests__snapshot_composed_state_fat_file.snap
src/cli/: mod.rs  output.rs
src/fatfile/: composed.rs  mod.rs  ndoc.rs
src/item/: mod.rs
src/schema/: mod.rs  parse.rs
tests/: cli.rs  fatfile.rs  markdown.rs  ndoc.rs
tests/fixtures/: component_schema.ncmp.typ  multi_violation.ndoc.typ  render.ncmp.typ  sample.md  valid.ndoc.typ
tests/snapshots/: markdown__snapshot_strikethrough.snap  markdown__snapshot_tasklist.snap  ndoc__compose_single_entry.snap
