[package]
name = "northdoc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Rust-native Typst document toolset: Markdown/data -> Typst -> PDF, single binary"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "ndoc"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Content hashing (cross-run-stable per-entry fingerprints)
blake3 = "1"

# Serialization (JSON prelude / --json envelope / YAML frontmatter)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Embedded Typst compiler stack.
# Pinned together so the World impl, library, syntax, fonts and PDF export agree.
typst = "0.14"
typst-library = "0.14"
typst-syntax = "0.14"
typst-pdf = "0.14"
typst-kit = { version = "0.14", default-features = false, features = ["embed-fonts"] }
typst-assets = { version = "0.14", features = ["fonts"] }
comemo = "0.4"

# Markdown -> Typst conversion (CommonMark + GFM, arena AST)
comrak = "0.30"

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
