[package]
name = "nordocs-cli"
description = "ndoc — nordocs CLI: a thin adapter over the nordocs-core service façade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ndoc"
path = "src/main.rs"

[dependencies]
nordocs-core = { path = "../nordocs-core" }
typst.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
base64.workspace = true
