[package]
name = "nordocs-core"
description = "nordocs engine: Markdown/data -> Typst -> PDF/SVG/PNG, binding-agnostic core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
blake3.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
typst.workspace = true
typst-library.workspace = true
typst-syntax.workspace = true
typst-pdf.workspace = true
typst-svg.workspace = true
typst-render.workspace = true
typst-ide.workspace = true
typst-kit.workspace = true
typst-assets.workspace = true
comemo.workspace = true
comrak.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
